--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -13,6 +13,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="/blog/">Блог</a>
     </nav>
 </div>
 {% block content %}
@@ -24,7 +25,7 @@
                 SkyStore
                 <small class="d-block mb-3 text-muted">&copy; 2023</small>
             </div>
-            {% include 'includes/inc_menu.html' %}
+            {% include 'catalog/includes/inc_menu.html' %}
         </div>
     </footer>
 </div>
