--- a/catalog/templates/catalog/contact_list.html
+++ b/catalog/templates/catalog/contact_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'catalog/base.html' %}
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Контакты</h1>
@@ -10,18 +10,20 @@
             <div class="card mb-4 box-shadow">
                 <div class="card-body">
                     <table class="table table-striped">
+                        {% for contact in object_list %}
                         <tr>
                             <td class="w-25">Страна</td>
-                            <td>{{country}}</td>
+                            <td>{{contact.country}}</td>
                         </tr>
                         <tr>
                             <td class="w-25">ИНН</td>
-                            <td>{{inn}}</td>
+                            <td>{{contact.inn}}</td>
                         </tr>
                         <tr>
                             <td class="w-25">Адрес</td>
-                            <td>{{address}}</td>
+                            <td>{{contact.address}}</td>
                         </tr>
+                        {% endfor %}
                     </table>
                 </div>
             </div>
@@ -47,7 +49,7 @@
                         <div class="mb-3">
                             <label for="message">Сообщение</label>
                             <textarea type="text" name="message" class="form-control" id="message"
-                                      placeholder="Контактный телефон" required></textarea>
+                                      required></textarea>
                         </div>
                         <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Отправить</button>
                     </form>
