--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'catalog/base.html' %}
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Главная</h1>
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="row text-center">
-        {% for product in products %}
+        {% for product in object_list %}
         <div class="col-3">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
@@ -22,18 +22,18 @@
         </div>
         {% endfor %}
     </div>
-    <ul class="pagination">
+<!--      <ul class="pagination">-->
 
-        {% if products.has_previous %}
-        <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">Предыдущая</a></li>
-        {% endif %}
+<!--        {% if products.has_previous %}-->
+<!--        <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">Предыдущая</a></li>-->
+<!--        {% endif %}-->
 
-        <li class="page-item"><a class="page-link">{{ products.number }} из {{ products.paginator.num_pages }}</a></li>
+<!--        <li class="page-item"><a class="page-link">{{ products.number }} из {{ products.paginator.num_pages }}</a></li>-->
 
-        {% if products.has_next %}
-        <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Следующая</a></li>
-        {% endif %}
-    </ul>
+<!--        {% if products.has_next %}-->
+<!--        <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Следующая</a></li>-->
+<!--        {% endif %}-->
+<!--    </ul>-->
 </div>
 
 {% endblock %}
