--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -3,12 +3,13 @@
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Главная</h1>
     <p class="lead">Skystore - магазин электроники и бытовой техники</p>
+    <a class="btn btn-primary" href="{% url 'catalog:product_create' %}" role="button">Создать новый продукт</a>
 </div>
 
 <div class="container">
     <div class="row text-center">
         {% for product in object_list %}
-        <div class="col-3">
+        <div class="col-4">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
                     <h6 class="my-0 font -normal">{{ product.name|truncatechars:30 }}</h6>
@@ -17,6 +18,8 @@
                     <h4 class="card-title pricing-card-title">{{ product.price }} руб.</h4>
                     <p class="card-text">{{ product.description|truncatechars:80 }}</p>
                     <a class="btn btn-primary" href="/product/{{ product.pk }}/" role="button">Посмотреть</a>
+                    <a href="{% url 'catalog:product_update' product.pk %}" class="btn btn-primary">Обновить</a>
+                    <a href="{% url 'catalog:product_delete' product.pk %}" class="btn btn-primary">Удалить</a>
                 </div>
             </div>
         </div>
