--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -15,6 +15,14 @@
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="/blog/">Блог</a>
     </nav>
+    <nav class="ms-5">
+        {% if user.is_authenticated %}
+        <a class="btn btn-primary" href="{% url 'users:logout' %}">Выйти</a>
+        {% else %}
+        <a class="btn btn-primary" href="{% url 'users:login' %}">Войти</a>
+        <a class="btn btn-primary" href="{% url 'users:register' %}">Регистрация</a>
+        {% endif %}
+    </nav>
 </div>
 {% block content %}
 {% endblock %}
