user app reset password

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -14,6 +14,7 @@
                         Войти
                     </button>
                     <a href="/" class="btn btn-primary">Назад</a>
+                    <a href="password_reset/" class="btn btn-primary">Забыли пароль</a>
                 </form>
             </div>
         </div>
