--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -16,6 +16,7 @@
                 <p class="card-text">Категория продукта: {{ object.category }}</p>
                 <p class="card-text">Дата добавления товара: {{ object.created_at }}</p>
                 <p class="card-text">Дата последнего обновления товара: {{ object.updated_at }}</p>
+                <p class="card-text">Владелец товара: {{ object.owner }}</p>
                 <a href="#" class="btn btn-primary">Купить</a>
                 <a href="/" class="btn btn-primary">Главная</a>
             </div>
