--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -23,8 +23,12 @@
                     <p class="card-text">Активная версия отсутствует</p>
                     {% endif %}
                     <a class="btn btn-primary" href="/product/{{ product.pk }}/" role="button">Посмотреть</a>
-                    <a href="{% url 'catalog:product_update' product.pk %}" class="btn btn-primary">Обновить</a>
-                    <a href="{% url 'catalog:product_delete' product.pk %}" class="btn btn-primary">Удалить</a>
+                    {% if perms.catalog.can_publication and perms.catalog.can_edit_description and perms.catalog.can_edit_category or user == product.owner %}
+                        <a href="{% url 'catalog:product_update' product.pk %}" class="btn btn-primary">Обновить</a>
+                    {% endif %}
+                    {% if user == product.owner %}
+                        <a href="{% url 'catalog:product_delete' product.pk %}" class="btn btn-primary">Удалить</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
